--- a/style.css
+++ b/style.css
@@ -67,4 +67,11 @@ h3 {
      font-family: 'TT Hoves', sans-serif;
      border: 0;
 } 
-
+@media (max-width: 450px) {.landing3 {
+    width :395px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+} .h3 {display: flex;
+flex-direction: row;}
+}
